<resources>
    <string name="app_name">Investec Ziggy</string>
    <string name="version">1.0.0</string>
    <string name="default_server_address">192.168.0.103:9810</string>

    <!-- titles -->
    <string name="login_title">Secure Login.</string>
    <string name="balances_title">Hello Mr. X</string>
    <string name="transfers_title">Ready To Transfer</string>
    <string name="settings_title">Settings</string>

    <!-- labels -->
    <string name="password_label">Password</string>
    <string name="investec_account_label">Investec Account</string>
    <string name="available_balance_label">Available Balance</string>
    <string name="ip_address_label">Server Address</string>


    <!-- captions -->
    <string name="login_page_description">Please log in with your Investec Online Password.</string>
    <string name="login_button_caption">Login</string>
    <string name="transfers_title_description">Hang in there, you are about to get some moola.</string>
    <string name="make_payment_caption">Make a Payment</string>
    <string name="need_assistance_caption">Need Assistance?</string>
    <string name="telephone_number_caption">+27 11 286 9663</string>
    <string name="save_caption">Save</string>

    <!-- hints -->
    <string name="password_edit_hint">Password</string>
</resources>
